<resources>
    <string name="app_name">RADAR common android app</string>

    <string name="service_notification_ticker">Data Collection</string>
    <string name="service_notification_text">Your phone and any connected devices are sending study data in the background. Collection continues so the study keeps receiving your data.</string>
    <string name="service_notification_title">Data Collection in Progress</string>

    <string name="filter_split_regex">,</string>
    <string name="retry_oauth_login">Failed to login to authorization service, please retry</string>
    <string name="login_failed">Failed to log in</string>

    <string name="dialog_usage">The researcher(s) only use the collected data in the study you consented to.</string>

    <string name="location_dialog_title">This app uses your \"Location\"</string>
    <string name="location_dialog_message">Location information is needed to enable Bluetooth Low Energy and/or location tracking as part of the study.</string>

    <string name="enable_location_dialog_title">Turn on Location</string>
    <string name="enable_location_dialog_message">Location services are turned off on your device. Tap OK to open Settings and turn them on so the study can keep collecting data.</string>

    <string name="bg_location_disclosure_title">Allow background location access?</string>
    <string name="bg_location_disclosure_body">This app collects your device location, including when the app is closed or not in use, to keep your connected study device (e.g. Bluetooth wearable) reachable and to record location samples for the research study you consented to. Location data is uploaded to the study server you agreed to. Tap Accept to be asked by Android for the &quot;Allow all the time&quot; location permission.</string>
    <string name="bg_location_disclosure_revoke_hint">You can revoke this permission at any time from Android Settings.</string>
    <string name="disclosure_accept">Accept</string>
    <string name="disclosure_reject">Reject</string>

    <string name="usage_tracking_dialog_title">Enable \"Usage tracking\"</string>
    <string name="usage_tracking_dialog_message">Enable usage access to keep track of what kind of applications you use.</string>
    <string name="usage_tracking_dialog_help">After click \"OK\", select RADAR pRMT from the list and enable \"Usage access\"</string>

    <string name="system_window_dialog_title">Enable \"Display over other apps\"</string>
    <string name="system_window_dialog_message">Allow this app to display on top of other apps.</string>
    <string name="system_window_dialog_help">After click \"OK\", select RADAR pRMT from the list and enable \"Display over other apps\".</string>


    <string name="disable_battery_optimization_dialog_title">Enable \"No Restrictions\" for background apps</string>
    <string name="disable_battery_optimization_dialog_message">\"No Restrictions for background apps\" means that the battery saver does not restrict app\'s activity.</string>
    <string name="disable_battery_optimization_dialog_help">After click \"OK\", select \"No restrictions\".</string>

    <string name="enable_location">Location information is needed to enable Bluetooth Low Energy and/or location tracking as part of the study.</string>
    <string name="enable_location_background">
        Background location is needed to keep passively collecting data while the app is in the background, either for Bluetooth devices or for actual, relative location.
    </string>

    <string name="enable_location_instruction">
        <![CDATA[Location information needed to enable Bluetooth Low Energy and location tracking. Enable location settings in Settings -> Location]]></string>
    <string name="enable_package_usage">Enable usage access to keep track of what kind of applications you use.</string>

    <string name="enable_location_title">Enable location tracking</string>
    <string name="enable_package_usage_title">Enable usage tracking</string>

    <string name="device_connected">CONNECTED</string>
    <string name="device_connecting">CONNECTING</string>
    <string name="device_disconnected">DISCONNECTED</string>
    <string name="device_ready">READY</string>
    <string name="storage_full">Storage almost full</string>
    <string name="storage_full_text">Your storage space is almost full. Please ensure that you have
        an internet connection to upload the data and/or move unnecessary photos and multimedia from
        your device.
    </string>
    <string name="channel_info_name">Information</string>
    <string name="channel_info_description">Informs about the app status.</string>
    <string name="channel_notify_name">Tasks</string>
    <string name="channel_notify_description">Notifies about recurring tasks and anomalous behaviour.</string>
    <string name="channel_alert_name">Missed tasks</string>
    <string name="channel_alert_description">Alerts about missed tasks or continuing anomalous behaviour.</string>
    <string name="channel_final_alert_name">Final warning for missed tasks</string>
    <string name="channel_final_alert_description">Final warning about missed tasks or continuing anomalous behaviour.</string>
    <string name="notification_bluetooth_needed_text">Bluetooth is needed for data collection. Please enable it as soon as possible.</string>
    <string name="notification_bluetooth_needed_title">Enable Bluetooth for RADAR</string>
    <string name="disable_battery_optimization">Disable battery optimization to keep a consistent connection with attached devices.</string>
    <string name="disable_battery_optimization_title">Disable battery optimization</string>
    <string name="cannot_connect_device">Cannot connect to device $1%s</string>
    <string name="device_unavailable">UNAVAILABLE</string>
</resources>
